Added google calender support

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,6 @@ SLACK_USER_ID=replace_me
 TIMEZONE=America/Chicago
 USE_OLLAMA=0
 OLLAMA_MODEL=mistral:latest
+GOOGLE_CALENDAR_ID=primary
+GOOGLE_TOKEN_PATH=token.json
+GOOGLE_CREDS_PATH=credentials.json
