Google calender sync added

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,5 @@ OLLAMA_MODEL=mistral:latest
 GOOGLE_CALENDAR_ID=primary
 GOOGLE_TOKEN_PATH=token.json
 GOOGLE_CREDS_PATH=credentials.json
+GOOGLE_SYNC_DAYS=7
+GOOGLE_SYNC_INTERVAL_MINUTES=5
